--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,12 +39,8 @@
         </ul>
         {% endif %}
 
-        <h2>Contents</h2>
-        <ul>
-          <li><a href="index.html">Top page</a></li>
-          <li><a href="model.html">Models</a></li>
-          <li><a href="code.html">Sample code</a></li>
-        </ul>
+        {% include contents.html %}
+
       </header>
       <section>
 
