--- a/docs/_includes/contents.html
+++ b/docs/_includes/contents.html
@@ -1,6 +1,12 @@
-<h2>Document</h2>
+<h3>Document</h3>
 <ul>
   <li><a href="index.html">Top page</a></li>
+  <li><a href="install.html">Install</a></li>
   <li><a href="model.html">Models</a></li>
   <li><a href="code.html">Sample code</a></li>
+</ul>
+
+<h3>SWRC Fit</h3>
+<ul>
+  <li><a href="swrcfit.html">SWRC Fit</a></li>
 </ul>
