--- a/docs/_includes/contents.html
+++ b/docs/_includes/contents.html
@@ -6,7 +6,7 @@
   <li><a href="code.html">Sample code</a></li>
 </ul>
 
-<h3>SWRC Fit</h3>
+<h3>Web version</h3>
 <ul>
   <li><a href="swrcfit.html">SWRC Fit</a></li>
 </ul>
