--- a/docs/_includes/about.html
+++ b/docs/_includes/about.html
@@ -1,5 +1,2 @@
-<h3>About unsatfit</h3>
-<ul>
-<li>Author: [Katsutoshi Seki](https://scholar.google.com/citations?user=Gs_ABawAAAAJ)</li>
-<li>License: MIT License</li>
-</ul>
+<p>Author: <a href="https://scholar.google.com/citations?user=Gs_ABawAAAAJ">Katsutoshi Seki</a></p>
+<p>MIT License</p>
