--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,9 +23,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub</a> or <a href="https://pypi.org/project/unsatfit/">PyPI</a></p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
