--- a/docs/_includes/contents.html
+++ b/docs/_includes/contents.html
@@ -3,5 +3,6 @@
   <li><a href="install.html">Install</a></li>
   <li><a href="model.html">Models</a></li>
   <li><a href="code.html">Sample code</a></li>
+  <li><a href="reference.html">Reference</a></li>
   <li><a href="swrcfit.html">SWRC Fit</a></li>
 </ul>
