--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -46,9 +46,7 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a> aka <a href="https://scholar.google.com/citations?user=Gs_ABawAAAAJ">Katsutoshi Seki</a></p>
-        {% endif %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a> aka <a href="https://scholar.google.com/citations?user=Gs_ABawAAAAJ">Katsutoshi Seki</a>. Feel free to <a href="{{ "feedback.html" | relative_url}}">send feedback</a>.</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
