--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     {% include head-custom.html %}
+    {% include google.html %}
   </head>
   <body>
     <div class="wrapper">
