--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,17 +26,7 @@
 
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub</a> or <a href="https://pypi.org/project/unsatfit/">PyPI</a></p>
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        <p class="view"><a href="https://arxiv.org/pdf/2302.00472.pdf">View user manual on arXiv</a></p>
 
         {% include contents.html %}
 
