--- a/docs/_includes/contents.html
+++ b/docs/_includes/contents.html
@@ -4,5 +4,5 @@
   <li><a href="code.html">Sample code</a></li>
   <li><a href="model.html">Models</a></li>
   <li><a href="reference.html">Reference</a></li>
-  <li><a href="swrcfit.html">SWRC Fit</a></li>
+  <li><a href="swrcfit.html">SWRC Fit and hystfit</a></li>
 </ul>
