--- a/docs/_includes/news.html
+++ b/docs/_includes/news.html
@@ -1,6 +1,6 @@
 - 2025-03-11: Provided [sample code for drawing water retention curves](code-wrc.html) after [discussion](https://github.com/sekika/unsatfit/discussions/8).
 - 2025-03-29: Released unsatfit 5.3; at [user's request](https://github.com/sekika/unsatfit/discussions/9), initialization functions (get_init and get_wrf) are now available for all [models](model.html). Expanded [WRF Sample codes](code-wrc.html).
 - 2025-05-08: [Presented](https://researchmap.jp/sekik/presentations/50028303/attachment_file.pdf) on multimodal soil hydraulic models and unsatfit at <a href="https://sekika.github.io/toyo/photos/rio.jpg">Rien van Genuchten conference</a> in Rio de Janeiro.
-- 2025-08-13: Released unsatfit 5.4; added functions for [pore-size distribution](reference.md#pore-size-distribution) analysis.
+- 2025-08-13: Released unsatfit 5.4; added functions for [pore-size distribution](reference.html#pore-size-distribution) analysis.
 - 2025-08-13: Released [pdfgridcat](https://pypi.org/project/pdfgridcat/), a tool for arranging multiple figures like [this](https://sekika.github.io/unsatfit/sample-wrc/pdf/unsoda-dual.pdf).
 - 2025-09-29: Released [unsatfit 6.0](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)); added [trimodal models](model.html#trimodal-models) and an option for isothermal hydraulic conductivity to the [set_model() method](reference.html#for-optimization).
