--- a/docs/_includes/news.html
+++ b/docs/_includes/news.html
@@ -4,3 +4,4 @@
 - 2025-08-13: Released unsatfit 5.4; added functions for [pore-size distribution](reference.html#pore-size-distribution) analysis.
 - 2025-08-13: Released [pdfgridcat](https://pypi.org/project/pdfgridcat/), a tool for arranging multiple figures like [this](https://sekika.github.io/unsatfit/sample-wrc/pdf/unsoda-dual.pdf).
 - 2025-09-29: Released [unsatfit 6.0](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)); added [trimodal models](model.html#trimodal-models) and an option for isothermal hydraulic conductivity to the [set_model() method](reference.html#for-optimization).
+- 2025-10-17: Described [how to read data from Excel](excel.html).
