--- a/docs/_includes/news.html
+++ b/docs/_includes/news.html
@@ -3,5 +3,6 @@
 - 2025-05-08: [Presented](https://researchmap.jp/sekik/presentations/50028303/attachment_file.pdf) on multimodal soil hydraulic models and unsatfit at <a href="https://sekika.github.io/toyo/photos/rio.jpg">Rien van Genuchten conference</a> in Rio de Janeiro.
 - 2025-08-13: Released unsatfit 5.4; added functions for [pore-size distribution](reference.html#pore-size-distribution) analysis.
 - 2025-08-13: Released [pdfgridcat](https://pypi.org/project/pdfgridcat/), a tool for arranging multiple figures like [this](https://sekika.github.io/unsatfit/sample-wrc/pdf/unsoda-dual.pdf).
-- 2025-09-29: Released [unsatfit 6.0](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)); added [trimodal models](model.html#trimodal-models) and an option for isothermal hydraulic conductivity to the [set_model() method](reference.html#for-optimization).
+- 2025-09-29: Released unsatfit 6.0; added [trimodal models](model.html#trimodal-models) and an option for isothermal hydraulic conductivity to the [set_model() method](reference.html#for-optimization).
 - 2025-10-17: Described [how to read data from Excel](excel.html).
+- 2026-01-20: Released [unsatfit 6.1](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)) with improved parameter handling. Added sample codes for trimodal models and isothermal hydraulic conductivity.
