Support trimodal model to SWRC Fit

--- a/docs/_includes/news.html
+++ b/docs/_includes/news.html
@@ -2,4 +2,5 @@
 - 2025-08-13: Released [pdfgridcat](https://pypi.org/project/pdfgridcat/), a tool for arranging multiple figures like [this](https://sekika.github.io/unsatfit/sample-wrc/pdf/unsoda-dual.pdf).
 - 2025-09-29: Released unsatfit 6.0; added [trimodal models](model.html#trimodal-models) and an option for isothermal hydraulic conductivity to the [set_model() method](reference.html#for-optimization).
 - 2025-10-17: Described [how to read data from Excel](excel.html).
-- 2026-01-20: Released [unsatfit 6.1](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)) with improved parameter handling. Added sample codes for trimodal models and isothermal hydraulic conductivity.
+- 2026-01-20: Released [unsatfit 6.1](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)) with improved parameter handling.
+- 2026-01-22: Added [sample code](code.html) for trimodal models and isothermal hydraulic conductivity, and added trimodal model support to [SWRC Fit](https://seki.webmasters.gr.jp/swrc/).
