VZJ paper published

--- a/docs/_includes/news.html
+++ b/docs/_includes/news.html
@@ -5,3 +5,4 @@
 - 2026-01-20: Released [unsatfit 6.1](https://pypi.org/project/unsatfit/#history) ([update](https://github.com/sekika/unsatfit/commits/main/unsatfit)) with improved parameter handling.
 - 2026-01-22: Added [sample code](code.html) for trimodal models and isothermal hydraulic conductivity, and added trimodal model support to [SWRC Fit](https://seki.webmasters.gr.jp/swrc/).
 - 2026-02-17: A [paper](http://www.uh.sav.sk/jhh/Find-Issues/All-Issues?kod=74,4%20-%20Early%20view) presenting trimodal hydraulic models for unsaturated flow was published online in JHH (Early View). The DOI will be available in December.
+- 2026-02-18: A [commentary paper](https://doi.org/10.1002/vzj2.70079) related to the trimodal hydraulic models was published in VZJ.
